<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_archive"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/action_archive"
        android:orderInCategory="50"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_edit"
        android:orderInCategory="10"
        app:showAsAction="always" />
</menu>
