<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.toxoidandroid.personalnotes.AppAuthenticationActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <ImageView
        android:id="@+id/google_drive_set"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/app_bar"
        android:layout_marginLeft="@dimen/menu_padding"
        android:layout_marginStart="@dimen/menu_padding"
        android:layout_marginTop="@dimen/menu_padding"
        android:src="@drawable/google_drive"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/google_drive_set"
        android:layout_marginLeft="@dimen/menu_padding"
        android:layout_marginStart="@dimen/menu_padding"
        android:layout_marginTop="@dimen/menu_padding"
        android:layout_toEndOf="@id/google_drive_set"
        android:layout_toRightOf="@id/google_drive_set"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/action_google_drive"
            android:textSize="@dimen/secondary_text"/>

        <TextView
            android:id="@+id/label_google_drive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"/>

        <LinearLayout
            android:id="@+id/tick_google_drive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@color/notesSelectionTickColor"
                android:src="@drawable/ic_action_done"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/menu_padding"
                android:layout_marginStart="@dimen/menu_padding"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/is_default"
                android:textSize="@dimen/small_menu_label"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/drop_box_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_drive_set"
        android:layout_marginLeft="@dimen/menu_padding"
        android:layout_marginStart="@dimen/menu_padding"
        android:layout_marginTop="@dimen/menu_padding"
        android:src="@drawable/dropbox"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/drop_box_set"
        android:layout_marginLeft="@dimen/menu_padding"
        android:layout_marginStart="@dimen/menu_padding"
        android:layout_marginTop="@dimen/menu_padding"
        android:layout_toEndOf="@+id/drop_box_set"
        android:layout_toRightOf="@+id/drop_box_set"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/action_dropbox"
            android:textSize="@dimen/secondary_text"/>

        <TextView
            android:id="@+id/label_drop_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"/>

        <LinearLayout
            android:id="@+id/tick_drop_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@color/notesSelectionTickColor"
                android:src="@drawable/ic_action_done"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/menu_padding"
                android:layout_marginStart="@dimen/menu_padding"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/is_default"
                android:textSize="@dimen/small_menu_label"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>